--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
+VITE_TMDB_API_KEY=
+
+
 # Appwrite Configuration
-VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-VITE_APPWRITE_PROJECT_ID=your-project-id-here
+VITE_APPWRITE_ENDPOINT = "https://nyc.cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID = 
+VITE_APPWRITE_PROJECT_NAME = 
 
 # Database Configuration
-VITE_APPWRITE_DATABASE_ID=portfolio-db
-VITE_APPWRITE_PROJECTS_COLLECTION_ID=projects
-VITE_APPWRITE_SKILLS_COLLECTION_ID=skills
-VITE_APPWRITE_EXPERIENCE_COLLECTION_ID=experience
+VITE_APPWRITE_DATABASE_ID=
+#MOVIE COLLECTION ID
+VITE_APPWRITE_MOVIE_COLLECTION_ID=
+# Collection Configuration
+VITE_APPWRITE_PROJECTS_COLLECTION_ID=
+VITE_APPWRITE_SKILLS_COLLECTION_ID=
+VITE_APPWRITE_EXPERIENCE_COLLECTION_ID=
 
 # Storage Configuration
-VITE_APPWRITE_BUCKET_ID=portfolio-assets
+VITE_APPWRITE_BUCKET_ID=
